--- a/css2/about-overview.css
+++ b/css2/about-overview.css
@@ -4,7 +4,7 @@
   justify-content: center; /* Center-align boxes */
   align-items: center; /* Center-align items */
   gap: 10px; /* Reduced gap for mobile */
-  margin-top: 20px;
+  margin: 50px 0;
   padding: 1rem 0; /* Reduced padding for mobile */
 }
 
@@ -54,6 +54,7 @@
 @media (max-width: 768px) {
   .boxes {
     flex-direction: column; /* Stack boxes vertically on mobile */
+    margin: 0;
   }
 
   .box:not(:last-child) {
@@ -77,7 +78,7 @@
 /* Further adjustments for very small screens */
 @media (max-width: 480px) {
   .boxes {
-    padding: 0.5rem 0; /* Further reduced padding for very small screens */
+    padding: 0; /* Further reduced padding for very small screens */
   }
 
   .box {
